--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  group: one
-  feed: one
+  sender: one
+  receiver: one
+  content: MyText
 
 two:
-  group: two
-  feed: two
+  sender: two
+  receiver: two
+  content: MyText
